# rag

./: .gitignore  README.md
services/query-service/: Dockerfile  config.py  dependencies.py  main.py  pyproject.toml
services/query-service/internal/: input_validator.py  reranker_client.py
services/query-service/internal/audit/: emitter.py  es_writer.py  event_builder.py
services/query-service/internal/cache/: auth_cache.py
services/query-service/internal/claims/: acl_adapter.py  normalizer.py
services/query-service/internal/guard/: enumeration_detector.py  guard.py  injection_detector.py  rate_limiter.py
services/query-service/internal/modelgateway/: client.py  context_builder.py  path_selector.py  verifier.py
services/query-service/internal/orchestrator/: es_client.py  merger.py  orchestrator.py  result_cache.py
services/query-service/internal/querybuilder/: acl_filter.py  bm25_only_query.py  embedding_client.py  hybrid_query.py  query_validator.py  secure_query_builder.py
services/query-service/internal/routing/: router.py
services/query-service/internal/understanding/: expander.py  parser_llm.py  parser_rules.py  understanding.py
services/query-service/routers/: query.py
services/query-service/tests/: conftest.py
services/query-service/tests/e2e/: conftest.py  test_acl_boundary.py  test_answer_quality.py  test_cache.py  test_reranker_quality.py  test_retrieval_quality.py  test_security_gaps.py
services/query-service/tests/integration/: test_audit_write.py  test_query_pipeline.py  test_result_cache.py
services/query-service/tests/security/: test_acl_bypass.py  (+2 more)
services/reranker-service/: Dockerfile  config.py  main.py  pyproject.toml  reranker.py  schemas.py
services/reranker-service/tests/: conftest.py
workers/ingestion/: Dockerfile  README.md  config.py  ingestion_local.py  kafka_worker.py  pyproject.toml  schemas.py
workers/ingestion/pipeline/: __init__.py  acl_bind.py  chunk.py  cjk_segmenter.py  embed.py  enrich.py  index.py  parse.py  risk_scan.py  runner.py  tokenizer.py
workers/ingestion/tests/: conftest.py
workers/ingestion/workers/: acl_binder_worker.py  base_worker.py  chunker_worker.py  connector_worker.py  embedding_worker.py  enricher_worker.py  indexer_worker.py  parser_worker.py  risk_scanner_worker.py
(+157 files in other folders)
