[tool.poetry]
name = "query-service"
version = "1.0.0"
description = "RAG query service — FastAPI core query path"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic-settings = "^2.0"
httpx = "^0.27.0"
redis = { extras = ["asyncio"], version = "^5.0" }
elasticsearch = { extras = ["async"], version = "^8.0" }
rag-common = { path = "../../packages/rag-common", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: marks tests as integration tests (require ES/Redis)",
    "e2e: marks tests as E2E tests (require full running stack)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
