[tool.poetry]
name = "ingestion-workers"
version = "1.0.0"
description = "RAG ingestion pipeline — 8 Kafka consumer workers"

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "^0.10"
pydantic-settings = "^2.0"
elasticsearch = { extras = ["async"], version = "^8.0" }
redis = { extras = ["asyncio"], version = "^5.0" }
httpx = "^0.27.0"
tiktoken = "^0.7"
jieba = "^0.42.1"
fugashi = "^1.5.0"
unidic-lite = "^1.0.8"
pymupdf = "^1.24"
pyyaml = "^6.0"
rag-common = { path = "../../packages/rag-common", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
